Fix for overflowing cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,7 @@
   padding-bottom: 10px;
   margin-bottom: 20px;
   height: 650px;
+  transition: box-shadow .3s;
 
   .card-body, .card-footer {
     margin: 10px;
@@ -22,7 +23,7 @@
 }
 
 .creature-card:hover {
-  box-shadow: 3px 3px 10px #283D3B;
+  box-shadow: 3px 3px 20px #283D3B;
 }
 
 .card-footer {
